# collage

./: t3  t3.cpp  t4  t4.cpp
proj/: .editorconfig  CMakeLists.txt  dotenv.h  main.cpp  proj.cpp  search.sh
proj/csv/: movies.csv  movies.csv!  series.csv
proj/html/: annotated.html  annotated_dup.js  argHandlers_8h_source.html  classEpisode-members.html  classEpisode.html  classMovie-members.html  classMovie.html  classSeason-members.html  classSeason.html  classSeries-members.html  classSeries.html  classVideo-members.html  classVideo.html  classes.html  csv_8h_source.html  dir_05d54ef2e8e46b70cebf3134a7160da3.html  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_23ec12649285f9fabf3a6b7380226c28.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_58f03a61d600c30e61c7a79d21688456.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_8c0ff3f281db8743c3d90a6778d7bf97.html  dir_ae2e9860df8d417b5c6cbd25090137a0.html  dir_b0854f1a05224068a522cf97814389a8.html  dir_cd6aed351559d38fe23e701c5fae309b.html  dir_cf6ec22f25cf5cc65f388a332967b5cc.html  dir_cf6ec22f25cf5cc65f388a332967b5cc.js  dotenv_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  formatting_8h_source.html  hierarchy.html  hierarchy.js  navtreeindex0.js  play_8h_source.html  requests_8h_source.html  structCreatedBy-members.html  structCreatedBy.html  structEntry-members.html  (+8 more)
proj/html/search/: all_0.js  (+4 more)
proj/requests/: requests.cpp  requests.h
proj/util/: argHandlers.cpp  argHandlers.h  csv.cpp  csv.h  dotenv.cpp  formatting.cpp  formatting.h  play.cpp  play.h  types.cpp  types.h  utils.hpp  videos.h
